fix(config): load config error

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,15 @@
+#      _   _           _     _____  _             _                    #
+#     | \ | |         | |   |  __ \| |           (_)                   #
+#     |  \| | _____  _| |_  | |__) | |_   _  __ _ _ _ __  ___          #
+#     | . ` |/ _ \ \/ / __| |  ___/| | | | |/ _` | | '_ \/ __|         #
+#     | |\  |  __/>  <| |_  | |    | | |_| | (_| | | | | \__ \         #
+#     |_| \_|\___/_/\_\\__| |_|    |_|\__,_|\__, |_|_| |_|___/         #
+#                                           __/ |                      #
+#                                          |___/                       #
+#                          Servidor de Suporte                         #
+#                         discord.gg/JtTN7E6A2q                        #
+
+
 connection:
   mysql:
     enable: false
