--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: NextOnlineTime
 version: ${project.version}
 main: com.nextplugins.onlinetime.NextOnlineTime
-authors: [ "Yuhtin", "Henry_Fabio", "Eike", "Gabriel Santos" ]
+authors: [ "Yuhtin", "Henry Fabio", "Eike", "Gabriel Santos" ]
 website: "https://github.com/NextPlugins"
