feat(pdm): implemented pdm & fixed time adapter

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,11 @@ dependencies {
     implementation 'com.github.HenryFabio:sql-provider:9561f20fd2'
 
     pdm "com.github.SaiintBrisson:command-framework:1.1.0"
+
     pdm "com.google.inject:guice:4.0"
+    pdm "javax.inject:javax.inject:1"
+    pdm "aopalliance:aopalliance:1.0"
+    pdm "org.ow2.asm:asm:8.0.1"
 
     def lombok = "org.projectlombok:lombok:1.18.16"
     compileOnly lombok
