--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ repositories {
 
     maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url = 'https://oss.sonatype.org/content/groups/public/' }
+
+    maven { url = 'https://repo.codemc.org/repository/maven-public' }
+
     maven { url = 'https://jitpack.io/' }
 }
 
@@ -27,6 +30,7 @@ dependencies {
 
     implementation 'com.github.HenryFabio:inventory-api:2.0.3'
     implementation 'com.github.HenryFabio:sql-provider:9561f20fd2'
+    implementation 'org.bstats:bstats-bukkit:1.8'
 
     pdm "com.github.SaiintBrisson:command-framework:1.1.0"
 
@@ -49,8 +53,9 @@ bukkit {
 
 shadowJar {
     archiveName("${project.name}-${project.version}.jar")
-    relocate 'com.henryfabio.minecraft.inventoryapi', 'com.nextplugins.nextmarket.libs.inventoryapi'
-    relocate 'com.henryfabio.sqlprovider', 'com.nextplugins.nextmarket.libs.sqlprovider'
+    relocate 'com.henryfabio.minecraft.inventoryapi', 'com.nextplugins.onlinetime.libs.inventoryapi'
+    relocate 'com.henryfabio.sqlprovider', 'com.nextplugins.onlinetime.libs.sqlprovider'
+    relocate('org.bstats', 'com.nextplugins.onlinetime.libs.bstats')
 }
 
 compileJava {
