--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
     maven { url = 'https://oss.sonatype.org/content/groups/public/' }
 
     maven { url = 'https://repo.codemc.org/repository/maven-public' }
+    maven { url = 'http://repo.extendedclip.com/content/repositories/placeholderapi/' }
 
     maven { url = 'https://jitpack.io/' }
 }
@@ -27,6 +28,7 @@ repositories {
 dependencies {
 
     compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+    compileOnly 'me.clip:placeholderapi:2.10.4'
 
     implementation 'com.github.HenryFabio:inventory-api:2.0.3'
     implementation 'com.github.HenryFabio:sql-provider:9561f20fd2'
