--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -39,3 +39,17 @@ type: false
 # Ative ou desative o uso do bStats (apenas serve para coletar algumas informações sobre o uso do plugin como quantidade de pessoas usando, servidores e etc...)
 bStats:
   enabled: true
+
+# Taxa na criação de cheques
+# Para desabilitar o sistema de cheque, coloque -1
+# O valor de exemplo abaixo siginifica 10% de taxa, caso ele coloque 10 horas, o cheque só terá 9 horas
+checkTax: 10
+
+# Item do cheque de tempo
+checkItem:
+  name: '&3&LCHEQUE DE TEMPO'
+  id: 339
+  data: 0
+  description:
+    - '&fTempo: &b%time%'
+    - '&7Você receberá o tempo em seu /tempo'
