--- a/src/main/resources/rewards.yml
+++ b/src/main/resources/rewards.yml
@@ -10,6 +10,7 @@ reward1:
     - '&8- &7Picareta de Diamante'
   time: 5 # in minutes
   id: 388
+  glow: true
   data: 0
   commands:
     - 'coins add %player% 2500'
