--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'com.github.HenryFabio:inventory-api:2.0.3'
     implementation 'com.github.HenryFabio:sql-provider:9561f20fd2'
     implementation 'org.bstats:bstats-bukkit:1.8'
-    implementation 'de.tr7zw:item-nbt-api-plugin:2.7.1'
+    implementation 'de.tr7zw:item-nbt-api:2.7.1'
 
     pdm "com.github.SaiintBrisson:command-framework:1.1.0"
 
