--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,11 @@ plugins {
     id 'java'
 
     id 'com.github.johnrengelman.shadow' version '5.0.0'
-
     id 'net.minecrell.plugin-yml.bukkit' version '0.3.0'
 }
 
 group 'com.nextplugins'
-version '1.2.3'
+version '1.2.4'
 
 tasks.build.dependsOn('shadowJar')
 
@@ -24,20 +23,18 @@ repositories {
 }
 
 dependencies {
-
-    compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.18.1-R0.1-SNAPSHOT'
     compileOnly 'com.github.PlaceholderAPI:PlaceholderAPI:2.10.9'
     compileOnly 'com.gmail.filoghost.holographicdisplays:holographicdisplays-api:2.4.0'
     compileOnly 'net.citizensnpcs:citizens:2.0.27-SNAPSHOT'
 
     implementation 'com.github.HenryFabio:inventory-api:2.0.3'
     implementation 'com.github.HenryFabio:sql-provider:9561f20fd2'
-    implementation 'de.tr7zw:item-nbt-api:2.8.0'
+    implementation 'de.tr7zw:item-nbt-api:2.9.0'
 
     def lombok = "org.projectlombok:lombok:1.18.16"
     compileOnly lombok
     annotationProcessor lombok
-
 }
 
 bukkit {
@@ -45,6 +42,7 @@ bukkit {
     authors = ['Henry_Fabio', 'Eike', 'Gabriel Santos', 'Yuhtin']
     website = 'https://github.com/NextPlugins'
     version = "${project.version}"
+    apiVersion = "1.13"
     load = 'POSTWORLD'
     softDepend = ['PlaceholderAPI', 'Citizens', 'HolographicDisplays']
 
