--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.nextplugins'
-version '1.2.4'
+version '1.2.5'
 
 tasks.build.dependsOn('shadowJar')
 
@@ -28,6 +28,7 @@ dependencies {
     compileOnly 'com.gmail.filoghost.holographicdisplays:holographicdisplays-api:2.4.0'
     compileOnly 'net.citizensnpcs:citizens:2.0.27-SNAPSHOT'
 
+    implementation 'com.github.juliarn:npc-lib:2.6-RELEASE'
     implementation 'com.github.Yuhtin:update-checker:1.2'
     implementation 'com.github.HenryFabio:inventory-api:2.0.3'
     implementation 'com.github.HenryFabio:sql-provider:9561f20fd2'
@@ -45,7 +46,7 @@ bukkit {
     version = "${project.version}"
     apiVersion = "1.13"
     load = 'POSTWORLD'
-    softDepend = ['PlaceholderAPI', 'Citizens', 'HolographicDisplays']
+    softDepend = ['PlaceholderAPI', 'ProtocolLib', 'HolographicDisplays']
 
     commands {
         tempo {
@@ -65,7 +66,6 @@ shadowJar {
 
     relocate 'de.tr7zw.changeme.nbtapi', 'com.nextplugins.onlinetime.libs.nbtapi'
     relocate 'de.tr7zw.annotations', 'com.nextplugins.onlinetime.libs.annotations'
-
 }
 
 compileJava {
